# SISPEC

./: .dockerignore  .gitignore  ARTIGO_PIBIT.md  Dockerfile  README-QUICK.md  README.md  SISPEC_PIBI*_revisado.docx  SISPEC_PIBI_revisado.docx  TODO.md  apresentacao_sispec(5).html  deploy.bat  deploy.sh  docker-compose.yml  render.yaml  start-frontend.bat  start-frontend.sh  start.bat  start.sh
backend/: Dockerfile  README.md  deno.json  requirements.txt  seed.py  start.bat  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  animal_service.py
backend/data/: counters.json  db.json
backend/migrations/: V001__initial_schema.sql
backend/src/: env.ts  index.ts  seed.ts
backend/src/db/: json.ts  migrate.ts  pg.ts
backend/src/routes/: animais.ts  auth.ts  dashboard.ts  lotes.ts  ml.ts  pesagens.ts  producoes.ts
backend/src/services/: calculos.ts  metrics.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  types.ts
frontend/src/components/: Toast.jsx  Toast.tsx
frontend/src/pages/: Animais.jsx  Animais.tsx  AnimalDetail.jsx  Login.jsx  (+14 more)
ml_service/: Cargo.toml  Dockerfile
ml_service/src/: main.rs
ml_service/src/api/: routes.rs
ml_service/src/models/: mod.rs  predictor.rs
planejamento-sispec/: planejamento-geral.txt
(+8 files in other folders)
